--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -1,29 +1,40 @@
-<div class="header-image t-margin" style="background-image:url({{~>asset_url url='images/luke-porter-203637-unsplash-wide.jpg' ~}});">
+<div class="header-image" style="background-image:url({{~>asset_url url='images/luke-porter-203637-unsplash-wide.jpg' ~}});">
   <div class="header-image-overlay">
     <div class="container">
       <div class="x-padding-full">
         <!-- <h1 class="b-margin-full b-padding">
           Celebrating youth volunteering in Scotland
         </h1> -->
-        <h2 class="t-margin-full t-padding text-gray">
+        {{!-- <h2 class="t-margin-full t-padding">
           Aged 12-25 and volunteer?
         </h2>
-        <p class="text-gray b-margin-full">
+        <p class="b-margin-full">
           <strong>The Saltire Awards are the Scottish Government's way of celebrating,<br />
           recognising and rewarding the commitment, contribution and <br />
           achievements of young volunteers in Scotland.</strong>
-        </p>
+        </p> --}}
       </div>
     </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="bottom">
+      <polygon fill="white" points="0,100 100,100 0,0" />
+    </svg>
   </div>
 </div>
 <div class="container">
-  <div class="b-padding-full v-margin-full">
-    <h3 class="text-centre">
+  <div class="b-padding-full">
+    <h2 class="text-centre t-padding">
+      Aged 12-25 and volunteer?
+    </h2>
+    <p class="text-centre b-margin-full">
+      <strong>The Saltire Awards are the Scottish Government's way of celebrating,<br />
+      recognising and rewarding the commitment, contribution and <br />
+      achievements of young volunteers in Scotland.</strong>
+    </p>
+    <h3 class="text-centre no-margin">
       Get certificates
     </h3>
     <p class="text-centre text-primary b-margin-full b-padding">
-      signed by Scottish Government Ministers
+      <strong>Signed by Scottish Government Ministers</strong>
     </p>
     <div class="columns certificates">
       <div class="column col-3 certificate text-centre">
