--- a/configuration/templates/account/auth/sign-up-admin-details.hbs
+++ b/configuration/templates/account/auth/sign-up-admin-details.hbs
@@ -1,4 +1,4 @@
-<div class="container b-padding-full v-margin-full">
+<div class="container">
   <h2>Add your details</h2>
 
   <h3 class="b-margin-full">
