--- a/configuration/templates/blog/post.hbs
+++ b/configuration/templates/blog/post.hbs
@@ -1,4 +1,4 @@
-<div class="container b-padding-full v-margin-full">
+<div class="container">
   {{#each @root.data.supplimentaryResponses.posts.hits.hits ~}}
   {{#with _source ~}}
   <h1>
