--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -21,58 +21,56 @@
   </div>
 </div>
 <div class="container">
-  <div class="b-padding-full">
-    <h2 class="text-centre t-padding">
-      Aged 12-25 and volunteer?
-    </h2>
-    <p class="text-centre b-margin-full">
-      <strong>The Saltire Awards are the Scottish Government's way of celebrating,<br />
-      recognising and rewarding the commitment, contribution and <br />
-      achievements of young volunteers in Scotland.</strong>
-    </p>
-    <h3 class="text-centre no-margin">
-      Get certificates
-    </h3>
-    <p class="text-centre text-primary b-margin-full b-padding">
-      <strong>Signed by Scottish Government Ministers</strong>
-    </p>
-    <div class="columns certificates">
-      <div class="column col-3 certificate text-centre">
-        <img src="{{~>asset_url url='images/certificates/logos/challenge.png' ~}}" class="certificate-icon img-responsive b-margin" />
-        <h4>The Challenge</h4>
-        <p>
-          For those getting started in volunteering through team challenges
-        </p>
-      </div>
-      <div class="column col-3 certificate text-centre">
-        <img src="{{~>asset_url url='images/certificates/logos/approach.png' ~}}" class="certificate-icon img-responsive b-margin" />
-        <h4>The Approach</h4>
-        <p>
-          For when you've reached 10 and 25 hours volunteering
-        </p>
-      </div>
-      <div class="column col-3 certificate text-centre">
-        <img src="{{~>asset_url url='images/certificates/logos/ascent.png' ~}}" class="certificate-icon img-responsive b-margin" />
-        <h4>The Ascent</h4>
-        <p>
-          For when you've reached 50, 100, 200 or even 500 hours
-        </p>
-      </div>
-      <div class="column col-3 certificate text-centre">
-        <img src="{{~>asset_url url='images/certificates/logos/summit.png' ~}}" class="certificate-icon img-responsive b-margin" />
-        <h4>The Summit</h4>
-        <p>
-          For those that have made an outstanding contribution to volunteering
-        </p>
-      </div>
+  <h2 class="text-centre t-padding">
+    Aged 12-25 and volunteer?
+  </h2>
+  <p class="text-centre b-margin-full">
+    <strong>The Saltire Awards are the Scottish Government's way of celebrating,<br />
+    recognising and rewarding the commitment, contribution and <br />
+    achievements of young volunteers in Scotland.</strong>
+  </p>
+  <h3 class="text-centre no-margin">
+    Get certificates
+  </h3>
+  <p class="text-centre text-primary b-margin-full b-padding">
+    <strong>Signed by Scottish Government Ministers</strong>
+  </p>
+  <div class="columns certificates">
+    <div class="column col-3 certificate text-centre">
+      <img src="{{~>asset_url url='images/certificates/logos/challenge.png' ~}}" class="certificate-icon img-responsive b-margin" />
+      <h4>The Challenge</h4>
+      <p>
+        For those getting started in volunteering through team challenges
+      </p>
     </div>
-    <div class="my-saltire columns b-margin-full b-padding-full">
-      <div class="column col-6 my-saltire-item align-centre">
-        <a href="/sign-up" class="btn btn-primary text-centre">Sign up now</a>
-      </div>
-      <div class="column col-6 my-saltire-item align-centre">
-        <a href="/sign-in" class="btn text-centre">Sign in</a>
-      </div>
+    <div class="column col-3 certificate text-centre">
+      <img src="{{~>asset_url url='images/certificates/logos/approach.png' ~}}" class="certificate-icon img-responsive b-margin" />
+      <h4>The Approach</h4>
+      <p>
+        For when you've reached 10 and 25 hours volunteering
+      </p>
+    </div>
+    <div class="column col-3 certificate text-centre">
+      <img src="{{~>asset_url url='images/certificates/logos/ascent.png' ~}}" class="certificate-icon img-responsive b-margin" />
+      <h4>The Ascent</h4>
+      <p>
+        For when you've reached 50, 100, 200 or even 500 hours
+      </p>
+    </div>
+    <div class="column col-3 certificate text-centre">
+      <img src="{{~>asset_url url='images/certificates/logos/summit.png' ~}}" class="certificate-icon img-responsive b-margin" />
+      <h4>The Summit</h4>
+      <p>
+        For those that have made an outstanding contribution to volunteering
+      </p>
+    </div>
+  </div>
+  <div class="my-saltire columns">
+    <div class="column col-6 my-saltire-item align-centre">
+      <a href="/sign-up" class="btn btn-primary text-centre">Sign up now</a>
+    </div>
+    <div class="column col-6 my-saltire-item align-centre">
+      <a href="/sign-in" class="btn text-centre">Sign in</a>
     </div>
   </div>
 </div>
