--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -1,7 +1,7 @@
 {{#compare (length @root.data.tasksInfo) 0 ~}}
 {{> log_empty}}
 {{else}}
-<div class="container b-padding-full v-margin-full">
+<div class="container">
   <h1>
     My achievements
   </h1>
