--- a/configuration/templates/opportunity/map.hbs
+++ b/configuration/templates/opportunity/map.hbs
@@ -1,4 +1,4 @@
-<div class="container b-padding-full v-margin-full">
+<div class="container">
   {{> volunteering_search_form}}
   <div class="head">
     <div class="columns col-gapless">
