--- a/configuration/templates/page/page.hbs
+++ b/configuration/templates/page/page.hbs
@@ -1,4 +1,4 @@
-<div class="container b-padding-full v-margin-full">
+<div class="container">
   {{#compare @root.data.primaryResponse.hits.total ">" 0 ~}}
   <!-- <h1>
     {{{@root.data.primaryResponse.hits.hits.[0]._source.title}}}
