--- a/configuration/templates/page/test.hbs
+++ b/configuration/templates/page/test.hbs
@@ -1,7 +1,7 @@
 <form id="sign-up-form" method="POST" class="active-form" data-component="TasksTrigger" data-TasksTrigger="sign-up">
-  <h1 class="x-padding">
+  {{!-- <h1 class="x-padding">
     Sign up
-  </h1>
+  </h1> --}}
   <div class="l-margin r-margin">
     <div class="bg-error s-rounded x-padding v-margin" id="active-form-message">
       <span id="form-message"></span>
