--- a/configuration/templates/volunteering/hours-body.hbs
+++ b/configuration/templates/volunteering/hours-body.hbs
@@ -1,4 +1,4 @@
-{{#with @root.request.body}}
+{{#with @root.request.body ~}}
   {{#json}}
   {{#json key='hours_input' type='array'}}
     {{#json}}
@@ -8,4 +8,4 @@
     {{/json}}
   {{/json}}
   {{/json}}
-{{/with}}
+{{/with ~}}
