--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -1,4 +1,4 @@
-<div class="container b-padding-full v-margin-full">
+<div class="container">
   <h1>Prototype of deny / modify hours for {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}  </h1>
 
   <h2>User: {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}} {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}}</h2>
