--- a/configuration/templates/opportunity/opportunity-head-tags.hbs
+++ b/configuration/templates/opportunity/opportunity-head-tags.hbs
@@ -1,5 +1,5 @@
-{{#if data.primaryResponse.hits.hits.[0] ~}}
-{{#with data.primaryResponse.hits.hits.[0]._source ~}}
+{{#if @root.data.supplimentaryResponses.opportunity.hits.hits.[0] ~}}
+{{#with @root.data.supplimentaryResponses.opportunity.hits.hits.[0]._source ~}}
 
 <title>{{title}} with {{organisation_name}} – Saltire Awards</title>
 <meta property="og:title" content="{{title}} with {{organisation_name}} – Saltire Awards" data-dynamic="true">
@@ -38,7 +38,7 @@
 
 {{/with ~}}
 {{else}}
-<title>Opportunity – Saltire Awards</title>
+<title>Volunteering opportunity – Saltire Awards</title>
 <meta property="og:title" content="Opportunity – Saltire Awards" data-dynamic="true">
 {{/if ~}}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
