--- a/configuration/templates/page/home-not-authenticated.hbs
+++ b/configuration/templates/page/home-not-authenticated.hbs
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="container">
-  <h2 class="text-centre t-padding">
+  <h2 class="text-centre">
     Aged 12-25 and volunteer?
   </h2>
   <p class="text-centre b-margin-full">
