--- a/src/main.scss
+++ b/src/main.scss
@@ -675,6 +675,7 @@ form {
 
 .header-image {
   margin-top: -($unit);
+  margin-bottom: -($unit);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
