added badge to hours page

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -394,7 +394,7 @@
             </div>
           </div>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="mid">
-            <polygon fill="{{@root.context.metaData.theme.ascent}}" points="0,100 100,0 100,100" />
+            <polygon fill="{{@root.context.metaData.theme.approach}}" points="0,100 100,0 100,100" />
           </svg>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="bottom">
             <polygon fill="{{@root.context.metaData.theme.copyright}}" points="0,100 100,0 100,100" />
