--- a/configuration/emails/parental-approval-body.mjml
+++ b/configuration/emails/parental-approval-body.mjml
@@ -14,7 +14,7 @@
 
             <p>This is an confirmation email from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has named you as their parent or guardian.</p>
 
-            <p>The {{@root.context.metaData.title}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
+            <p>{{@root.context.metaData.fullTitle}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
 
             <p>As {{first_name}} is under 12, we require their parent or guardian to give permission to use the {{@root.context.metaData.title}} website. You can indicate that you give permission, by clicking on the link below</p>
 
