--- a/configuration/templates/volunteering/claim-hours.hbs
+++ b/configuration/templates/volunteering/claim-hours.hbs
@@ -2,7 +2,7 @@
   <h1>
     Claim hours by certificate code
   </h1>
-  <form id="input-code-form" action="/submit-hours-claim" method="POST" data-component="TasksTrigger" data-success-destination="/hours" data-TasksTrigger="form-error-handler">
+  <form id="input-code-form" action="/submit-hours-claim" method="POST" data-component="TasksTrigger" data-success-destination="/hours" data-TasksTrigger="ajax-form-handler">
     <div class="columns b-margin">
       <div class="column col-3">
         <div class="form-group">
