--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -14,7 +14,7 @@
   </div>
   {{#unless @root.data.isAdmin ~}}
   <div class="pull-right">
-    {{> badge type=(if (compare (sumArray (pluck @root.data.tasksInfo "hours")) "<" 100) 'approach' else='ascent') key='current' hours=(round (sumArray (pluck @root.data.tasksInfo "hours")) 'down')}}
+    {{> badge type=(if (compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) "<" 100) 'approach' else='ascent') key='current' hours=(round (sumArray (pluck @root.data.tasksInfo "hours_verified")) 'down')}}
   </div>
   <h2 class="b-margin-full">
     {{sumArray (pluck @root.data.tasksInfo "hours")}} total hours added
